# rustcord

./: Cargo.toml  README.md
src/: main.rs  networking.rs  ui.rs
src/networking/: data.rs
src/networking/data/: channel.rs  discord.rs  gateway.rs  guild.rs  message.rs  receive.rs  sendable.rs  user.rs
src/networking/data/guild/: activity.rs
src/networking/data/message/: embed.rs
src/networking/data/receive/: dispatch.rs
